src/test/ui/feature-gates/feature-gate-object_safe_for_dispatch.stderr
error[E0038]: the trait `NonObjectSafe1` cannot be made into an object
  --> $DIR/feature-gate-object_safe_for_dispatch.rs:18:38
   |
LL | fn takes_non_object_safe_ref<T>(obj: &dyn NonObjectSafe1) {
   |                                      ^^^^^^^^^^^^^^^^^^^ `NonObjectSafe1` cannot be made into an object
   |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/feature-gate-object_safe_for_dispatch.rs:4:23
   |
LL | trait NonObjectSafe1: Sized {}
   |       --------------  ^^^^^ ...because it requires `Self: Sized`
   |       |
   |       this trait cannot be made into an object...

error[E0038]: the trait `NonObjectSafe2` cannot be made into an object
  --> $DIR/feature-gate-object_safe_for_dispatch.rs:22:36
   |
LL | fn return_non_object_safe_ref() -> &'static dyn NonObjectSafe2 {
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^ `NonObjectSafe2` cannot be made into an object
   |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/feature-gate-object_safe_for_dispatch.rs:7:8
   |
LL | trait NonObjectSafe2 {
   |       -------------- this trait cannot be made into an object...
LL |     fn static_fn() {}
   |        ^^^^^^^^^ ...because associated function `static_fn` has no `self` parameter
help: consider turning `static_fn` into a method by giving it a `&self` argument
   |
LL |     fn static_fn(&self) {}
   |                  ^^^^^
help: alternatively, consider constraining `static_fn` so it does not apply to trait objects
   |
LL |     fn static_fn() where Self: Sized {}
   |                    ^^^^^^^^^^^^^^^^^

error[E0038]: the trait `NonObjectSafe3` cannot be made into an object
  --> $DIR/feature-gate-object_safe_for_dispatch.rs:27:35
   |
LL | fn takes_non_object_safe_box(obj: Box<dyn NonObjectSafe3>) {
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^ `NonObjectSafe3` cannot be made into an object
   |
   = help: consider moving `foo` to another trait
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/feature-gate-object_safe_for_dispatch.rs:11:8
   |
LL | trait NonObjectSafe3 {
   |       -------------- this trait cannot be made into an object...
LL |     fn foo<T>(&self);
   |        ^^^ ...because method `foo` has generic type parameters

error[E0038]: the trait `NonObjectSafe4` cannot be made into an object
  --> $DIR/feature-gate-object_safe_for_dispatch.rs:31:35
   |
LL | fn return_non_object_safe_rc() -> std::rc::Rc<dyn NonObjectSafe4> {
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `NonObjectSafe4` cannot be made into an object
   |
   = help: consider moving `foo` to another trait
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/feature-gate-object_safe_for_dispatch.rs:15:19
   |
LL | trait NonObjectSafe4 {
   |       -------------- this trait cannot be made into an object...
LL |     fn foo(&self, &Self);
   |                   ^^^^^ ...because method `foo` references the `Self` type in this parameter

error[E0038]: the trait `NonObjectSafe1` cannot be made into an object
  --> $DIR/feature-gate-object_safe_for_dispatch.rs:38:16
   |
LL | impl Trait for dyn NonObjectSafe1 {}
   |                ^^^^^^^^^^^^^^^^^^ `NonObjectSafe1` cannot be made into an object
   |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/feature-gate-object_safe_for_dispatch.rs:4:23
   |
LL | trait NonObjectSafe1: Sized {}
   |       --------------  ^^^^^ ...because it requires `Self: Sized`
   |       |
   |       this trait cannot be made into an object...

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0038`.
